--- a/modern_javascript/ect/poiemaweb_Javascript/13. 타입 체크.md
+++ b/modern_javascript/ect/poiemaweb_Javascript/13. 타입 체크.md
@@ -6,5 +6,95 @@
 
 ## 1. typeof
 
+타입 연산자 `typeof` 는 피연산자의 데이터 타입을 문자열로 반환한다.
+그런데 `typeof` 연산자는 원시 타입을 체크하는 것엔 문제가 없지만, 객체의 종류 (일반 객체, 배열, Date, RegExp, Function, DOM 요소 등) 까진 구분해주지 못한다. 모두 다 object를 반환하기 때문이다.
 
+이를 개선할 수 있는 타입 체크 기능을 만들어보며 타입 체크에 대해 공부해보자.
 
+## 2. Object.prototype.toString
+
+[Object.prototype.toString](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Object/toString) 메소드는 객체를 나타내는 문자열을 반환한다. [Function.prototype.call](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Function/call) 메소드를 사용하면 모든 타입의 값의 타입을 알아낼 수 있다.
+
+```js
+Object.prototype.toString.call('');             // [object String]
+Object.prototype.toString.call(new String());   // [object String]
+Object.prototype.toString.call(1);              // [object Number]
+Object.prototype.toString.call(new Number());   // [object Number]
+```
+
+위 두 메서드를 이용해 타입을 반환하는 함수를 만들 수 있다.
+
+```js
+function getType(target) {
+  return Object.prototype.toString.call(target).slice(8,-1);
+}
+```
+
+Object.prototype.toString.call 메소드가 반환한 문자열에서 “[object”와 “]”를 제외하고 타입을 나타내는 문자열만을 추출하는 함수이다
+
+위 방법을 사용하면 객체의 종류(일반 객체, 배열, Date, RegExp, Function, DOM 요소 등)까지 타입을 식별할 수 있다.
+
+## 3. instanceof
+
+위 방법으로는 객체의 상속 관계까지는 체크할 수 없다.
+
+```js
+// HTMLElement를 상속받은 모든 DOM 요소에 css 프로퍼티를 추가하고 값을 할당한다.
+function css(elem, prop, val) {
+  // type checking...
+  elem.style[prop] = val;
+}
+
+css({}, 'color', 'red');
+// TypeError: Cannot set property 'color' of undefined
+```
+
+css 함수는 첫번째 파라미터로 (elem) 반드시 HTMLElement를 상속받은 DOM 요소를 전달해야 한다. HTMLElement를 상속받은 DOM 요소에는 HTMLDivElement, HTMLUListElement, HTMLLIElement, HTMLParagraphElement 등 많은 요소가 있는데, 이를 일일히 체크할 수는 없다. 따라서 특정 객체가 HTMLElement를 상속받은 객체인지를 확인해야 한다.
+
+![Element Node](https://poiemaweb.com/img/HTMLElement.png)
+
+타입 연산자에는 typeof 외에도 **instanceof** 가 있다. 
+instanceof 연산자는 **피연산자인 객체가 우항에 명시한 타입의 인스턴스인지 여부**를 알려준다. 이때 타입이란 constructor를 말하며, 프로토타입 체인에 존재하는 모든 constructor를 검색하여 일치하는 constructor가 있다면 true를 반환한다.
+
+```js
+function Person() {}
+const person = new Person();
+
+console.log(person instanceof Person); // true
+console.log(person instanceof Object); // true
+```
+
+instanceof를 사용해서 아래와 같이 HTMLElement를 상속받은 객체인지를 확인할 수 있다.
+
+```js
+function getType(target) {
+  return Object.prototype.toString.call(target).slice(8, -1);
+}
+
+function isString(target) {
+  return getType(target) === 'String';
+}
+
+function isElement(target) {
+  return !!(target && target instanceof HTMLElement);
+  // 또는 nodeType을 사용할 수도 있다.
+  // return !!(target && target.nodeType === 1);
+}
+
+function css(elem, prop, val) {
+  // type checking
+  if (!(isElement(elem) && isString(prop) && isString(val))) {
+    throw new TypeError('매개변수의 타입이 맞지 않습니다.');
+  }
+  elem.style[prop] = val;
+}
+
+```
+
+## 4. 유사 배열 객체
+
+배열인지 체크하기 위해서는 `Array.isArray` 메소드를 사용한다.
+
+유사 배열 객체는 length 프로퍼티를 갖는 객체로, 문자열, arguments, HTMLCollection, NodeList 등이 있다.
+
+유사 배열 객체는 순회할 수 있지만, 배열은 아니므로 배열 메소드를 사용하려면 call, apply 함수를 사용해야 한다.
