--- a/modern_javascript/ect/poiemaweb_Javascript/14. 프로토타입.md
+++ b/modern_javascript/ect/poiemaweb_Javascript/14. 프로토타입.md
@@ -48,9 +48,203 @@ console.log(Person.__proto__ === Function.prototype) // true
 #### prototype 프로퍼티
 
 - 함수 객체만 가지고 있는 프로퍼티이다.
-- 함수 객체가 생성자로 사용될 때, 이 함수를 통해 생성될 객체의 프로토타입 객체를 가리킨다.
+- **함수 객체가 생성자로 사용될 때, 이 함수를 통해 생성될 객체의 프로토타입 객체**를 가리킨다.
 
 ```js
 console.log(Person.prototype === foo.__proto__)
 ```
 
+## 3. constructor 프로퍼티
+
+**프로토타입 객체는 constructor 프로퍼티를 갖는다**. 이 constructor 프로퍼티는 객체의 입장에서 **자신을 생성한 객체**를 가리킨다.
+
+```js
+function Person(name) {
+  this.name = name;
+}
+var foo = new Person('Lee')
+
+// Person() 생성자 함수에 의해 생성된 객체를 생성한 객체는 Person() 생성자 함수이다.
+console.log(Person.prototype.constructor === Person);
+
+// foo 객체를 생성한 객체는 Person() 생성자 함수이다.
+console.log(foo.constructor === Person);
+
+// Person() 생성자 함수를 생성한 객체는 Function() 생성자 함수이다.
+console.log(Person.constructor === Function);
+```
+
+## 4. Prototype chain
+
+자바스크립트는 특정 객체의 프로퍼티나 메소드에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티 또는 메소드가 없다면 **[[Prototype]]**이 가리키는 링크를 따라 자신의 부모 역할을 하는 프로토타입 객체의 프로퍼티나 메소드를 차례대로 검색한다. 이것을 프로토타입 체인이라 한다.
+
+### 4.1 객체 리터럴 방식으로 생성된 객체의 프로토타입 체인
+
+객체 리터럴 방식으로 생성된 객체는 결국 Object() 생성자 함수를 사용해서 객체를 만드는 방법의 축약 표현이다.
+
+Object 생성자 함수는 함수 객체이므로 일반 객체와는 달리 prototype 프로퍼티가 있다.
+
+```js
+// 객체 리터럴 방식으로 생성된 person 객체
+var person = {
+  name: 'Lee',
+  gender: 'male',
+  sayHello: function(){
+    console.log('Hi! my name is ' + this.name);
+  }
+};
+
+// __proto__ 접근자로 자신의 부모 객체인 프로토타입 객체를 알아낼 수 있다.
+console.log(person.__proto__  === Object.prototype) // true
+// prototype 객체에 있는 constructor 프로퍼티는 자신을 생성한 객체를 가르킨다
+console.log(Object.prototype.constructor === Object) // true
+console.log(Object.__proto__ === Function.prototype) // true
+console.log(Function.prototype.__proto__ === Object.prototype)
+```
+
+![Object literal Prototype chaining](https://poiemaweb.com/img/object_literal_prototype_chaining.png)
+
+결론적으로 **객체 리터럴을 사용해 객체를 생성한 경우, 그 객체의 프로토타입 객체는 Object.prototype이다.**
+
+### 4.2 생성자 함수로 생성된 객체의 프로토타입 체인
+
+생성자 함수로 객체를 생성하기 위해서는 우선 생성자 함수를 정의해야 한다.
+
+함수는 3가지 방식으로 정의할 수 있다.
+
+- 함수 선언식
+
+  ```js
+  function square(number){
+    return number*number
+  }
+  ```
+
+- 함수 표현식
+
+  ```js
+  let square = function(number) {
+    return number*number
+  }
+  ```
+
+- Function() 생성자 함수
+
+함수 선언식과 함수 표현식은 모두 함수 (내부적으로) 리터럴 방식을 사용하고, 함수 리터럴 방식은 Function 생성자 함수로 함수를 생성하는 것을 단순화시킨 것이다.
+
+즉, 어떤 방식으로 함수 객체를 생성하더라도 모든 함수 객체의 prototype 객체는 Function.prototype이다. 생성자 함수도 함수 객체이므로 마찬가지로 **생성자 함수의 prototype 객체는 Function.prototype이다.**
+
+| 객체 생성 방식       | 엔진의 객체 생성     | 인스턴스의 prototype 객체  |
+| :------------------- | :------------------- | :------------------------- |
+| 객체 리터럴          | Object() 생성자 함수 | Object.prototype           |
+| Object() 생성자 함수 | Object() 생성자 함수 | Object.prototype           |
+| 생성자 함수          | 생성자 함수          | 생성자 함수 이름.prototype |
+
+```js
+function Person(name, gender) {
+  this.name = name;
+  this.gender = gender;
+  this.sayHello = function(){
+    console.log('Hi! my name is ' + this.name);
+  };
+}
+
+// 생성자 함수로 만든 객체
+var foo = new Person('Lee', 'male');
+
+console.log(foo.__proto__ == Person.prototype)
+console.log(Person.prototype.__proto__ == Object.prototype)
+console.log(Person.prototype.constructor === Person)
+console.log(Person.__proto__ === Function.prototype)
+console.log(Function.prototype.__proto__ === Object.prototype)
+```
+
+
+
+![constructor function prototype chaining](https://poiemaweb.com/img/constructor_function_prototype_chaining.png)
+
+생성자 함수로 만들어진 foo 객체의 프로토타입 객체는 (`foo.__proto__`) Person.prototype 이다.
+Person() 생성자 함수의 프로토타입 객체는 (`Person.__proto__`) Function.prototype 이다.
+
+Person.prototype과 Function.prototype 객체의 프로토타입 객체는 모두 Object.prototype이다.
+
+객체 리터럴 방식이나, 생성자 함수 방식이나, 결국 모든 객체의 부모 객체인 Object.prototype 객체에서 프로토타입 체인이 끝나게 된다.
+
+**Object.prototype** 객체를 **프로토타입 체인의 종점(End of prototype chain)**이라고 한다.
+
+## 5.  프로토타입 객체의 확장
+
+프로토타입 객체도 객체이므로, 일반 객체와 같이 프로퍼티를 추가/삭제할 수 있다.
+
+```js
+function Person(name) {
+  this.name = name;
+}
+
+var foo = new Person('Lee')
+
+// Person.prototype에 sayHello 메소드를 추가했다.
+Person.prototype.sayHello = function() {
+  console.log(`Hi! my name is ${this.name}`)
+}
+
+foo.sayHello();
+```
+
+추가한 sayHello 메소드는 프로토타입 체인에 반영된다. 따라서 생성자 함수 Person에 의해 생성된 모든 객체는 프로토타입 체인에 의해 Person.prototype의 메소드인 sayHello를 사용할 수 있게 되었다.
+
+## 6. 원시 타입(Primitive data type)의 확장
+
+자바스크립트에서 원시 타입(숫자, 문자열, boolean, null, undefined)을 제외한 모든것은 객체이다. 그런데 자바스크립트에서 객체가 아닌 원시 타입이 프로퍼티나 메소드를 가지고 있는 것은 뭘까?
+
+```js
+// 원시 타입 문자열
+var str = 'test';
+console.log(typeof str);                 // string
+console.log(str.constructor === String); // true
+
+// String 생성자 함수로 생성한 문자열 객체
+var strObj = new String('test');
+console.log(typeof strObj);                 // object
+console.log(strObj.constructor === String); // true
+
+console.log(str.toUpperCase());    // TEST
+console.log(strObj.toUpperCase()); // TEST
+```
+
+원시 타입으로 프로퍼티나 메소드를 호출할 때, 원시 타입과 연관된 객체로 일시 변환되어 프로토타입 객체를 공유하게 된다.
+
+원시 타입은 객체가 아니므로 프로퍼티나 메소드를 직접 추가할 수 없지만, String 객체의 프로토타입 객체 **String.prototype** 에 메소드를 추가하면 원시타입과 객체 모두 메소드를 사용할 수 있다.
+
+```js
+var str = 'test';
+
+String.prototype.myMethod = function () {
+  return 'myMethod';
+};
+
+console.log(str.myMethod());      // myMethod
+console.log('string'.myMethod()); // myMethod
+console.dir(String.prototype);
+```
+
+Object.prototype 객체는 프로토타입 체인의 종점, 모든 객체는 프로토타입 체인에 의해 Object.prototype 객체의 메소드를 사용할 수 있다.
+
+내장 객체 [Built-in object](https://poiemaweb.com/js-built-in-object)의 Global objects (표준 내장 객체)인 String, Number, Array 객체 등이 가지고 있는 표준 메소드는 프로토타입 객체인 String.prototype, Number.prototype, Array.prototype 등에 정의되어 있다. 
+
+자바스크립트는 표준 내장 객체의 프로토타입 객체에 메소드의 추가를 허용한다.
+
+## 7. 프로토타입 객체의 변경
+
+부모 객체인 프로토타입을 동적으로 변경 가능하다.
+
+주의할 점은, 프로토타입 객체를 변경하면
+
+- 프로토타입 객체 변경 시점 이전에 생성된 객체는 기존 프로토타입 객체를 [[Prototype]] 에 바인딩하고,
+- 프로토타입 객체 변경 시점 이후에 생성된 객체는 변경된 프로토타입 객체를 [[Prototype]]에 바인딩한다.
+
+## 8. 프로토타입 체인 동작 조건
+
+객체의 프로퍼티를 참조하는 경우, 해당 객체에 프로퍼티가 없는 경우 프로토타입 체인이 동작한다.
+
+객체의 **프로퍼티에 값을 할당하는 경우에는 프로토타입 체인이 동작하지 않는다.** 객체에 해당 프로퍼티가 있으면 값을 재할당하고 해당 프로퍼티가 없는 경우엔 프로퍼티를 동적으로 추가하기 때문이다.
