Update part 1.11 - Promises, async/await (Introduction: callbacks)

--- a/modern_javascript/1_The_JavaScript_language/기본 자바스크립트 메서드 정리.md
+++ b/modern_javascript/1_The_JavaScript_language/기본 자바스크립트 메서드 정리.md
@@ -305,3 +305,15 @@ stringfiedJSON = JSON.stringfy(info)
 parsedJSON = JSON.parse(stringfiedJSON);
 ```
 
+
+
+## Map과 Set
+
+### Map
+
+Map은 키에 다양한 자료형을 허용하는 객체와 유사한 자료구조.
+
+### Set
+
+Set은 중복을 허용하지 않는 값을 모아놓은 특별한 컬렉션.
+
